--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "css-throttle",
 	"description": "A high-performance solution using css to prevent button double-clicking.",
+	"type": "module",
 	"version": "1.0.0-beta.1",
-	"packageManager": "pnpm@8.4.0",
+	"packageManager": "pnpm@8.5.1",
 	"main": "./dist/index.cjs",
 	"module": "./dist/index.mjs",
 	"browser": {
@@ -31,9 +32,8 @@
 		"typings"
 	],
 	"scripts": {
-		"build": "run-s clean build:{bundle,es5,types} roll-types",
+		"build": "run-s clean build:{bundle,types} roll-types",
 		"build:bundle": "rollup -c build/rollup.config.ts --configPlugin @rollup/plugin-typescript",
-		"build:es5": "cross-env BABEL_ENV=es5 pnpm build:bundle",
 		"build:types": "tsc -p src/tsconfig.json",
 		"build:docs": "rm-all docs && typedoc && prettier --write \"**/*.md\"",
 		"deploy": "sh scripts/deploy.sh",
@@ -45,50 +45,30 @@
 		"workflow:publish-test": "zx scripts/workflow.mjs",
 		"clean": "rm-all dist es lib",
 		"dist": "run-s eslint prettier build",
-		"test-unit": "jest --filter ./scripts/filter-unit.js",
-		"jest": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --coverage",
-		"coveralls": "cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
 		"eslint": "eslint --fix .",
 		"prettier": "prettier --write \"**/*.{js,ts,jsx,tsx,yml,json,md}\""
 	},
-	"dependencies": {
-		"core-js": "^3.30.2",
-		"js-cool": "^3.1.0"
-	},
 	"devDependencies": {
 		"@babel/core": "^7.21.8",
-		"@babel/preset-env": "^7.21.5",
-		"@babel/preset-typescript": "^7.21.5",
 		"@eslint-sets/eslint-config-ts": "^5.2.0",
-		"@microsoft/api-extractor": "^7.34.8",
-		"@rollup/plugin-alias": "^5.0.0",
-		"@rollup/plugin-babel": "^6.0.3",
-		"@rollup/plugin-commonjs": "^24.1.0",
-		"@rollup/plugin-json": "^6.0.0",
-		"@rollup/plugin-node-resolve": "^15.0.2",
-		"@rollup/plugin-terser": "^0.4.1",
-		"@rollup/plugin-typescript": "^11.1.0",
-		"@types/jest": "^29.5.1",
-		"@types/node": "^20.1.1",
+		"@node-kit/extra.fs": "^2.5.1",
+		"@rollup/plugin-terser": "^0.4.3",
+		"@types/node": "^20.2.1",
 		"chalk": "^5.2.0",
-		"coveralls": "^3.1.1",
+		"core-js": "^3.30.2",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.40.0",
-		"fast-glob": "^3.2.12",
-		"jest": "^29.5.0",
+		"gulp": "^4.0.2",
+		"js-cool": "^4.0.0",
 		"load-yml": "^1.3.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.8.8",
 		"prettier-config-common": "^1.4.0",
 		"reinstaller": "^3.0.0",
 		"rm-all": "^1.0.0",
-		"rollup": "^3.21.6",
-		"rollup-plugin-cleanup": "^3.2.1",
+		"rollup": "^3.22.0",
 		"rollup-plugin-filesize": "^10.0.0",
 		"rollup-plugin-inject-code": "^1.0.0",
-		"rollup-plugin-visualizer": "^5.9.0",
-		"ts-jest": "^29.1.0",
-		"ts-morph": "^18.0.0",
 		"tsnd": "^1.1.0",
 		"typedoc": "^0.24.7",
 		"typedoc-plugin-markdown": "^3.15.3",
