--- a/package.json
+++ b/package.json
@@ -3,81 +3,61 @@
 	"description": "A high-performance solution using css to prevent button double-clicking.",
 	"type": "module",
 	"version": "1.0.0-beta.1",
-	"packageManager": "pnpm@8.5.1",
-	"main": "./dist/index.cjs",
-	"module": "./dist/index.mjs",
-	"browser": {
-		"dist/index.js": "dist/index.min.js",
-		"dist/es5/index.js": "dist/es5/index.min.js"
-	},
-	"unpkg": "./dist/index.min.js",
-	"jsdelivr": "./dist/index.min.js",
-	"types": "./dist/index.d.ts",
+	"packageManager": "pnpm@8.6.0",
+	"main": "src/css.js",
+	"module": "src/css.mjs",
+	"style": "src/index.css",
 	"exports": {
 		".": {
-			"types": "./dist/index.d.ts",
-			"require": "./dist/index.cjs",
-			"import": "./dist/index.mjs"
+			"require": "./src/css.js",
+			"import": "./src/css.mjs"
+		},
+		"./less": {
+			"require": "./src/index.js",
+			"import": "./src/index.mjs"
+		},
+		"./css": {
+			"require": "./src/css.js",
+			"import": "./src/css.mjs"
+		},
+		"./scss": {
+			"require": "./src/scss.js",
+			"import": "./src/scss.mjs"
 		},
 		"./*": "./*"
 	},
 	"directories": {
-		"lib": "lib",
 		"dist": "dist",
 		"src": "src"
 	},
 	"files": [
-		"lib",
 		"dist",
 		"typings"
 	],
 	"scripts": {
-		"build": "run-s clean build:{bundle,types} roll-types",
-		"build:bundle": "rollup -c build/rollup.config.ts --configPlugin @rollup/plugin-typescript",
-		"build:types": "tsc -p src/tsconfig.json",
-		"build:docs": "rm-all docs && typedoc && prettier --write \"**/*.md\"",
-		"deploy": "sh scripts/deploy.sh",
-		"roll-types": "api-extractor run && rm-all temp && cp dist/index.d.ts dist/es5",
-		"watch": "pnpm build:bundle -w",
 		"pub": "tscjs scripts/publish",
 		"unpub": "tscjs scripts/unpublish",
 		"sync": "tscjs scripts/sync",
 		"workflow:publish-test": "zx scripts/workflow.mjs",
 		"clean": "rm-all dist es lib",
-		"dist": "run-s eslint prettier build",
+		"dist": "run-s eslint prettier",
 		"eslint": "eslint --fix .",
 		"prettier": "prettier --write \"**/*.{js,ts,jsx,tsx,yml,json,md}\""
 	},
 	"devDependencies": {
-		"@babel/core": "^7.21.8",
-		"@eslint-sets/eslint-config-ts": "^5.2.0",
+		"@eslint-sets/eslint-config-basic": "^5.2.0",
 		"@node-kit/extra.fs": "^2.5.1",
 		"@rollup/plugin-terser": "^0.4.3",
 		"@types/node": "^20.2.1",
-		"chalk": "^5.2.0",
-		"core-js": "^3.30.2",
-		"cross-env": "^7.0.3",
 		"eslint": "^8.40.0",
-		"gulp": "^4.0.2",
-		"js-cool": "^4.0.0",
 		"load-yml": "^1.3.0",
-		"npm-run-all": "^4.1.5",
 		"prettier": "^2.8.8",
 		"prettier-config-common": "^1.4.0",
 		"reinstaller": "^3.0.0",
 		"rm-all": "^1.0.0",
-		"rollup": "^3.22.0",
-		"rollup-plugin-filesize": "^10.0.0",
-		"rollup-plugin-inject-code": "^1.0.0",
 		"tsnd": "^1.1.0",
-		"typedoc": "^0.24.7",
-		"typedoc-plugin-markdown": "^3.15.3",
 		"typescript": "^5.0.4",
 		"zx": "^7.2.2"
-	},
-	"peerDependencies": {
-		"core-js": ">= 3",
-		"js-cool": ">= 2"
 	},
 	"pnpm": {
 		"peerDependencyRules": {
