--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@types/node": "^20.2.1",
 		"eslint": "^8.40.0",
 		"load-yml": "^1.3.0",
+		"npm-run-all": "^4.1.5",
 		"prettier": "^2.8.8",
 		"prettier-config-common": "^1.4.0",
 		"reinstaller": "^3.0.0",
