--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "css-throttle",
 	"description": "A high-performance solution using css to prevent button double-clicking.",
 	"type": "module",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"packageManager": "pnpm@8.6.0",
 	"main": "src/css.js",
 	"module": "src/css.mjs",
@@ -36,23 +36,32 @@
 		"typings"
 	],
 	"scripts": {
+		"build": "gulp --require @esbuild-kit/cjs-loader -f build/gulpfile.ts",
 		"pub": "node --loader @esbuild-kit/esm-loader scripts/publish",
 		"unpub": "node --loader @esbuild-kit/esm-loader scripts/unpublish",
 		"sync": "node --loader @esbuild-kit/esm-loader scripts/sync",
 		"workflow:publish-test": "zx scripts/workflow.mjs",
 		"clean": "rm-all dist es lib",
-		"dist": "run-s eslint prettier",
+		"dist": "run-s eslint prettier build",
 		"eslint": "eslint --fix .",
 		"prettier": "prettier --write \"**/*.{js,ts,jsx,tsx,yml,json,md}\""
 	},
 	"devDependencies": {
+		"@esbuild-kit/cjs-loader": "^2.4.2",
 		"@esbuild-kit/esm-loader": "^2.5.5",
-		"@eslint-sets/eslint-config-basic": "^5.2.0",
+		"@eslint-sets/eslint-config-ts": "^5.2.0",
 		"@node-kit/extra.fs": "^2.5.1",
+		"@types/gulp": "^4.0.11",
+		"@types/gulp-autoprefixer": "^0.0.34",
+		"@types/gulp-less": "^0.0.33",
 		"@types/node": "^20.2.1",
 		"eslint": "^8.40.0",
+		"gulp": "^4.0.2",
+		"gulp-autoprefixer": "^8.0.0",
+		"gulp-less": "^5.0.0",
 		"load-yml": "^1.3.0",
 		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.24",
 		"prettier": "^2.8.8",
 		"prettier-config-common": "^1.4.0",
 		"reinstaller": "^3.0.0",
